--- a/gb/20/1/27/n11824613.md
+++ b/gb/20/1/27/n11824613.md
@@ -1,14 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wicklt351/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wicklt351/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wicklt351/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wicklt351/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wicklt351/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wicklt351/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wicklt351/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wicklt351/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>舒默吁联邦政府宣布“公共健康紧急状态”</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/63d510cdfdb9c09624f665af2de2bf5d-594x400.jpg" />
-<h6>纽约州联邦参议员要求联邦政府立即正式宣布美国进入“公共健康紧急状态”，防止“中共肺炎”扩散。 (Getty Images)
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2020年01月27日讯】（大纪元记者施萍纽约报导）美国参议院少数党领袖<ahref="https://github.com/wicklt351/djy/blob/master/gb/tag/%E8%88%92%E9%BB%98.md#1">舒默</a>（Charles Schumer）周日（1月26日）发出公开信，要求联邦政府立即正式宣布美国进入“公共健康紧急状态”（Official Public Health Emergency），以便使“疾病控制预防中心”CDC获取数千万的紧急处理资金，防止来自中国的<ahref="https://github.com/wicklt351/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>（俗称<ahref="https://github.com/wicklt351/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>、新冠肺炎）在美国扩大。</p>
-<p>根据<ahref="https://github.com/wicklt351/djy/blob/master/gb/tag/%E8%88%92%E9%BB%98.md#1">舒默</a>办公室消息，舒默最近刚刚完成了一笔预算谈判，成功为CDC获得了一项“传染病快速反应储备资金”（Infectious Disease Rapid Response Reserve），将这项基金从原来的5,000万美元提高到了8,500万美元。但是，这笔资金不在“公共健康紧急状态”下不能启动。</p>
-<p>所以，舒默要求联邦“卫生及公共服务部”（Department of Health and Human Services，简称HHS）正式宣布，全国进入由中共病毒（俗称武汉病毒、新型冠状病毒）引起的公共健康紧急状态，CDC才能使用这个基金，控制<ahref="https://github.com/wicklt351/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>的传播。</p>
+	<p>【大纪元2020年01月27日讯】（大纪元记者施萍纽约报导）美国参议院少数党领袖<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%88%92%E9%BB%98.md#1">舒默</a>（Charles Schumer）周日（1月26日）发出公开信，要求联邦政府立即正式宣布美国进入“公共健康紧急状态”（Official Public Health Emergency），以便使“疾病控制预防中心”CDC获取数千万的紧急处理资金，防止来自中国的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>（俗称<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>、新冠肺炎）在美国扩大。</p>
+<p>根据<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%88%92%E9%BB%98.md#1">舒默</a>办公室消息，舒默最近刚刚完成了一笔预算谈判，成功为CDC获得了一项“传染病快速反应储备资金”（Infectious Disease Rapid Response Reserve），将这项基金从原来的5,000万美元提高到了8,500万美元。但是，这笔资金不在“公共健康紧急状态”下不能启动。</p>
+<p>所以，舒默要求联邦“卫生及公共服务部”（Department of Health and Human Services，简称HHS）正式宣布，全国进入由中共病毒（俗称武汉病毒、新型冠状病毒）引起的公共健康紧急状态，CDC才能使用这个基金，控制<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>的传播。</p>
 <p>“如果我们知道这种中共病毒对于公共健康的风险是‘一针及时能省九针’（及时行动防止大患）的话，那么我们越主动积极，对公共健康越有利。”舒默在一份声明中说。</p>
 <p>“到目前为止CDC已经做了大量工作，正在24小时保护公共健康，但是我们还要确保他们保持这种速度以及对爆发更加恶劣时做出准备，他们需要立刻获得这个关键的目前还不能动用的联邦基金。这就是为什么我今天要求HHS宣布冠状病毒的公共安全紧急状态。这样，HHS可以为CDC启动这项基金。”</p>
 <p>舒默解释道，这笔资金对CDC的关键作用是，CDC对这笔钱有全部的自由裁定权。他们可以在任何他们认为合适的行为上使用这个钱，只要他们通知国会就行。</p>
@@ -22,36 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/1/22/n11813005.md#1">美国出现首例中共肺炎 川普回应</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/1/22/n11813949.md#1">防中共肺炎 CDC对多名美国人进行测试</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/1/23/n11816401.md#1">美国如何用机器人治疗首例中共肺炎患者</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/1/24/n11818569.md#1">川普听取中共肺炎简报 白宫：美国人可放心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/22/n11813005.md#1">美国出现首例中共肺炎 川普回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/22/n11813949.md#1">防中共肺炎 CDC对多名美国人进行测试</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11816401.md#1">美国如何用机器人治疗首例中共肺炎患者</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11818569.md#1">川普听取中共肺炎简报 白宫：美国人可放心</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10823173.md#1" target="_blank">【还原史实】中共“大跃进” 四千万中国人活活饿死</a></li><li><a href="https://github.com/wicklt351/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10069025.md#1" target="_blank">杨宁：八路军为何大量购买治花柳病的药品？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/22/n12274883.md#1">【更新】美关闭休斯顿中领馆“间谍活动猖獗”</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/21/n12272533.md#1">明天系公然叫板当局 中共高层内斗激烈</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/21/n12272211.md#1">班农：美国已定下解体中共计划 分两步走</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/22/n12274329.md#1">隐身两周后习露面 要企业家“爱国”的背后</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/21/n12271351.md#1">【翻墙必看】黄万里关于三峡大坝的遗嘱曝光</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/20/n12270541.md#1">欧阳娜娜拍大陆综艺节目 突扑主持人怀中痛哭</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/21/n12271594.md#1">《半泽直树2》首集创高收视 出现台湾与国旗</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/22/n12276003.md#1">女版黄安湖北老家被水淹 哭喊求救遭呛别添乱</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/20/n12270885.md#1">杨幂与沈腾综艺上互怼 嘉行pk开心麻花爆笑</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/22/n12274977.md#1">福原爱发文吐低潮 谢江宏杰“救她无数次”</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/20/n12270512.md#1">为何人们说早夭的儿女是讨债鬼？</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/9/4/4/n2484948.md#1">从《清明上河图》看时代风华（上）</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/20/n12270583.md#1">苏东坡前世为和尚 黄庭坚由信佛女子转生</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/21/n12272881.md#1">医和：能预知人寿数和国运的医生</a></li>
-<li><a href="https://github.com/wicklt351/djy/blob/master/gb/20/7/20/n12269412.md#1">现代最惨绝的水库溃坝灾难  怎就发生在中国？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wicklt351/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wicklt351/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/27/n11824613.htm">舒默吁联邦政府宣布“公共健康紧急状态”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/27/n11824613.htm">舒默吁联邦政府宣布“公共健康紧急状态”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wicklt351/djy/blob/master/gb/20/1/27/n11824613.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wicklt351/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wicklt351/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wicklt351/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wicklt351/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wicklt351/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/1/27/n11824613.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
